...
                              height: 58.0,
                              child: TransformHelper.translate(
                                  x: 2.63,
                                  y: 235.00,
                                  z: 0,
                                  child: FloatingActionButton(
                                    key: Key('Login'),
                                    backgroundColor: Colors.transparent,
                                    elevation: 0,
                                    onPressed: () {
                                      if (_passwordTextController.text == "" ||
                                          _usernameTextController.text == "") {
                                        Widget okButton = TextButton(
...
                              left: null,
                              top: null,
                              right: null,
                              bottom: null,
                              width: 300,
                              height: 150,
                              key: Key('Username'),
                              child: TransformHelper.translate(
                                x: 0.00,
                                y: 12.50,
                                z: 0,
                                child: Padding(
                                  padding: EdgeInsets.all(15),
...
                              left: null,
                              top: null,
                              right: null,
                              bottom: null,
                              width: 300,
                              height: 200,
                              key: Key('Password'),
                              child: TransformHelper.translate(
                                x: -1.00,
                                y: 136.50,
                                z: 0,
                                child: Padding(
                                  padding: EdgeInsets.all(15),
...
